try to understand working of treegrid with hierarchical provider